fix: overflow invite list container

--- a/src/app/modules/invite/invite-list/invite-list.component.scss
+++ b/src/app/modules/invite/invite-list/invite-list.component.scss
@@ -4,6 +4,7 @@
 }
 #container {
   height: 100%;
+  overflow: auto;
   // display: flex;
   // flex-direction: column;
 
